<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer1a"
        android:id="@+id/button1"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="submitAnswer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer1b"
        android:id="@+id/button2"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer1c"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_marginTop="36dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer1d"
        android:id="@+id/button4"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
